feat: Implement core API for course management, reviews, and enrollments, including rate limiting.